--- a/tailscale/translations/en.yaml
+++ b/tailscale/translations/en.yaml
@@ -65,7 +65,7 @@ configuration:
       networks), you can disable this functionality.
       When not set, this option is enabled by default.
   ssh:
-    name: Allow Tailscale to manage the authentication and authorization of SSH
+    name: Tailscale SSH
     description: >-
       This option will allow Tailscale to take over SSH authentication and
       authorization for your HA instance. 
